<resources>
    <string name="app_name">ExotiscanApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_screen_image_decoration">first screen image decoration</string>
    <string name="welcome_to_exotiscan">Welcome to Exotiscan!</string>
    <string name="desc_first_screen">Use your camera or upload a picture from your gallery to detect rare animals around you easily and quickly</string>
    <string name="next_arrow_icon">Next Arrow Icon</string>
    <string name="swipe_text_button">Swipe</string>
    <string name="second_screen_image_decoration">second screen image decoration</string>
    <string name="desc_second_screen">Oops! We need permission to access your device. Please enable camera and gallery permissions so the app can run smoothly.</string>
    <string name="thank_you">Thank you!</string>
    <string name="desc_third_screen">Enjoy discovering rare animals that make you curious.</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="logo_splash">Logo Splash</string>
    <string name="floating_action_button">Floating Action Button</string>
</resources>